Updated some notebooks

--- a/JavaScript/Functions.ipynb
+++ b/JavaScript/Functions.ipynb
@@ -491,6 +491,466 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Function Expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function squareNum(num) {\n",
+    "    return num ** 2;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Function: squareNumExpression]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squareNumExpression = function(num) {\n",
+    "    return num ** 2;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squareNum(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squareNumExpression(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'subtract'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operation = 'subtract'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Function: func]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "func = null\n",
+    "if (operation === 'add') {\n",
+    "    func = function(num1, num2) { return num1 + num2 };\n",
+    "} else if (operation === 'subtract') {\n",
+    "    func = function(num1, num2) { return num1 - num2 };\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "func(7, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "func(7, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Callback functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Function: informUser]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "informUser = function() {\n",
+    "    console.log('Timer has elapsed');\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timeout {\n",
+       "  _idleTimeout: 3000,\n",
+       "  _idlePrev: [TimersList],\n",
+       "  _idleNext: [TimersList],\n",
+       "  _idleStart: 26995,\n",
+       "  _onTimeout: [Function: informUser],\n",
+       "  _timerArgs: undefined,\n",
+       "  _repeat: null,\n",
+       "  _destroyed: false,\n",
+       "  [Symbol(refed)]: true,\n",
+       "  [Symbol(kHasPrimitive)]: false,\n",
+       "  [Symbol(asyncId)]: 13,\n",
+       "  [Symbol(triggerId)]: 10\n",
+       "}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timer has elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "setTimeout(informUser, 3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timeout {\n",
+       "  _idleTimeout: 3000,\n",
+       "  _idlePrev: [TimersList],\n",
+       "  _idleNext: [TimersList],\n",
+       "  _idleStart: 131375,\n",
+       "  _onTimeout: [Function],\n",
+       "  _timerArgs: undefined,\n",
+       "  _repeat: null,\n",
+       "  _destroyed: false,\n",
+       "  [Symbol(refed)]: true,\n",
+       "  [Symbol(kHasPrimitive)]: false,\n",
+       "  [Symbol(asyncId)]: 22,\n",
+       "  [Symbol(triggerId)]: 19\n",
+       "}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timer has elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "setTimeout(function() {\n",
+    "    console.log('Timer has elapsed');\n",
+    "}, 3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Function: informUserArrow]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "informUserArrow = () => {\n",
+    "    console.log('Timer has elapsed');\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timeout {\n",
+       "  _idleTimeout: 3000,\n",
+       "  _idlePrev: [TimersList],\n",
+       "  _idleNext: [TimersList],\n",
+       "  _idleStart: 315438,\n",
+       "  _onTimeout: [Function: informUserArrow],\n",
+       "  _timerArgs: undefined,\n",
+       "  _repeat: null,\n",
+       "  _destroyed: false,\n",
+       "  [Symbol(refed)]: true,\n",
+       "  [Symbol(kHasPrimitive)]: false,\n",
+       "  [Symbol(asyncId)]: 36,\n",
+       "  [Symbol(triggerId)]: 33\n",
+       "}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timer has elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "setTimeout(informUserArrow, 3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Function: squareNumArrow]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squareNumArrow = (num) => {\n",
+    "    return num ** 2;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Function: squareNumArrow]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squareNumArrow = (num) => num ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Function: squareNumArrow]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squareNumArrow = num => num ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squareNumArrow(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Function: addArrow]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addArrow = (num1, num2) => num1 + num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addArrow(4, 2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
