Created Arrays notebook

--- a/JavaScript/Objects.ipynb
+++ b/JavaScript/Objects.ipynb
@@ -422,6 +422,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Objects in Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\n",
+       "  color: { R: 200, G: 120, B: 250 },\n",
+       "  weight: { value: 2.5, units: 'kg' }\n",
+       "}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complexBall = {\n",
+    "    color: {\n",
+    "        R: 200,\n",
+    "        G: 120,\n",
+    "        B: 250,\n",
+    "    },\n",
+    "    weight: {\n",
+    "        value: 2.5,\n",
+    "        units: 'kg',\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Values vs References"
    ]
   },
