--- a/JavaScript/Functions.ipynb
+++ b/JavaScript/Functions.ipynb
@@ -951,11 +951,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rest parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Math.max(4, 7, 9, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "function name(firstName, lastName, ...titles) {\n",
+    "    console.log(firstName + ' ' + lastName)\n",
+    "    console.log(titles)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 'Dr', 'Jr' ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "name('', '', 'Dr', 'Jr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ 'Mark', 'Tupala', 'Dr', 'Jr' ]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values = ['Mark', 'Tupala', 'Dr', 'Jr']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mark Tupala\n",
+      "[ 'Dr', 'Jr' ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "name(...values)"
+   ]
   }
  ],
  "metadata": {
