--- a/JavaScript/Objects.ipynb
+++ b/JavaScript/Objects.ipynb
@@ -1461,6 +1461,439 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Destructuring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ name: 'Mark', age: 36 }"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user = {\n",
+    "    name: 'Mark',\n",
+    "    age: 36\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Invalid left-hand side in assignment",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:1",
+      "({ name, age }) = user",
+      "^^^^^^^^^^^^^^^",
+      "",
+      "SyntaxError: Invalid left-hand side in assignment",
+      "    at new Script (vm.js:88:7)",
+      "    at createScript (vm.js:261:10)",
+      "    at Object.runInThisContext (vm.js:309:10)",
+      "    at run ([eval]:1054:15)",
+      "    at onRunRequest ([eval]:888:18)",
+      "    at onMessage ([eval]:848:13)",
+      "    at process.emit (events.js:314:20)",
+      "    at emit (internal/child_process.js:877:12)",
+      "    at processTicksAndRejections (internal/process/task_queues.js:85:21)"
+     ]
+    }
+   ],
+   "source": [
+    "({ name, age }) = user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mark'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{ name2, age2, isAdmin = false } = user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isAdmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const { name: userName, age: userAge, isAdmin: isUserAdmin = false } = user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "userAge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mark'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "userName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Identifier 'name3' has already been declared",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:1",
+      "const { name: name3, ...otherProps } = user",
+      "^",
+      "",
+      "SyntaxError: Identifier 'name3' has already been declared",
+      "    at evalmachine.<anonymous>:1:1",
+      "    at Script.runInThisContext (vm.js:120:18)",
+      "    at Object.runInThisContext (vm.js:309:38)",
+      "    at run ([eval]:1054:15)",
+      "    at onRunRequest ([eval]:888:18)",
+      "    at onMessage ([eval]:848:13)",
+      "    at process.emit (events.js:314:20)",
+      "    at emit (internal/child_process.js:877:12)",
+      "    at processTicksAndRejections (internal/process/task_queues.js:85:21)"
+     ]
+    }
+   ],
+   "source": [
+    "const { name: name3, ...otherProps } = user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ name: 'Mark', age: 36 }"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "otherProps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spread Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ name: 'Mark', age: 36 }"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user = {\n",
+    "    name: 'Mark',\n",
+    "    age: 36\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ name: 'Mark', age: 36 }"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "userCopy = { ...user }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ name: 'Mark', age: 37, isAdmin: true }"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "userChanged = { ...user, age: 37, isAdmin: true }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ firstName: 'John', sayHi: [Function: sayHi] }"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user = {\n",
+    "    firstName: \"John\",\n",
+    "    sayHi() {\n",
+    "        console.log(`Hello, ${this.firstName}!`);\n",
+    "    }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, John!\n"
+     ]
+    }
+   ],
+   "source": [
+    "user.sayHi()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ firstName: 'Mark', sayHi: [Function: sayHi] }"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user2 = {\n",
+    "    firstName: \"Mark\",\n",
+    "    sayHi() {\n",
+    "        console.log(`Hello, ${this.firstName}!`);\n",
+    "    }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\n",
+       "  { firstName: 'John', sayHi: [Function: sayHi] },\n",
+       "  { firstName: 'Mark', sayHi: [Function: sayHi] }\n",
+       "]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users = [user, user2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, undefined!\n",
+      "Hello, undefined!\n"
+     ]
+    }
+   ],
+   "source": [
+    "users.forEach(user.sayHi);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, John!\n",
+      "Hello, John!\n"
+     ]
+    }
+   ],
+   "source": [
+    "users.forEach(user.sayHi.bind(user));"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
